--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=(local)\\SQLEXPRESS;Database=IpEntriesDB;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  }
 }
